--- a/index.html
+++ b/index.html
@@ -31,5 +31,10 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
+<fb:login-button 
+  scope="public_profile,email"
+  onlogin="checkLoginState();">
+</fb:login-button>
+
 </body>
 </html>
