--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 				 }(document, 'script', 'facebook-jssdk'));
 				 FB.getLoginStatus(function(response) {
 					 statusChangeCallback(response);
+					});	
+				function checkLoginState() {
+					FB.getLoginStatus(function(response) {
+						statusChangeCallback(response);
 					});
+				}
 		</script>
 <head>
 <title>Page Title</title>
