--- a/index.html
+++ b/index.html
@@ -1,37 +1,34 @@
 <html>
-		<script>
-				window.fbAsyncInit = function() {
-					FB.init({
-						appId      : '{your-app-id}',
-						cookie     : true,
-						xfbml      : true,
-						version    : '{latest-api-version}'
-					});
-						
-					FB.AppEvents.logPageView();   
-						
-				};
-			
-				(function(d, s, id){
-					 var js, fjs = d.getElementsByTagName(s)[0];
-					 if (d.getElementById(id)) {return;}
-					 js = d.createElement(s); js.id = id;
-					 js.src = "https://connect.facebook.net/en_US/sdk.js";
-					 fjs.parentNode.insertBefore(js, fjs);
-				 }(document, 'script', 'facebook-jssdk'));
-				 FB.getLoginStatus(function(response) {
-					 statusChangeCallback(response);
-					});	
-				function checkLoginState() {
-					FB.getLoginStatus(function(response) {
-						statusChangeCallback(response);
-					});
-				}
-		</script>
 <head>
-<title>Page Title</title>
+<title>Mag App</title>
 </head>
 <body>
+<script>
+	window.fbAsyncInit = function() {
+		FB.init({
+			appId            : 415436092258721,
+			autoLogAppEvents : true,
+			xfbml            : true,
+			version          : 'v2.12'
+		});
+	};
+
+	(function(d, s, id){
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) {return;}
+			js = d.createElement(s); js.id = id;
+			js.src = "https://connect.facebook.net/en_US/sdk.js";
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+		FB.getLoginStatus(function(response) {
+		statusChangeCallback(response);
+	});	
+function checkLoginState() {
+	FB.getLoginStatus(function(response) {
+		statusChangeCallback(response);
+	});
+}
+</script>
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
@@ -40,6 +37,8 @@
   scope="public_profile,email"
   onlogin="checkLoginState();">
 </fb:login-button>
+
+<div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
 
 </body>
 </html>
