--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '{415436092258721}',
+      appId      : 415436092258721,
       cookie     : true,  // enable cookies to allow the server to access 
                           // the session
       xfbml      : true,  // parse social plugins on this page
