--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 </head>
 <body>
+
+  teees
 <script>
   // This is called with the results from from FB.getLoginStatus().
   function statusChangeCallback(response) {
